# LearningNotes

./: .editorconfig  .gitignore  LearningNotes.sln  README.md
RedisLock/: Program.cs  RedisLock.csproj
docs/: result.json
src/AzureDev/AISearch/: aisearch.sln
src/AzureDev/AppServiceMvcDemo/: Dockerfile
src/AzureDev/AzIsolatedNET7/: AzIsolatedNET7.csproj
src/AzureDev/FunctionApp1/: FunctionApp1.sln
src/AzureDev/FunctionWithLogicApp/: Function1.cs  FunctionWithLogicApp.csproj  FunctionWithLogicApp.sln
src/AzureDev/InProgressFunction/: Function1.cs  InProgressFunction.sln
src/AzureDev/IsolatedAzFunction/: HttpExample.cs  Program.cs
src/AzureDev/LocalFunctionProj/: CosmosExample.cs  HttpExample.cs  LocalFunctionProj.csproj
src/AzureDev/TestIsolatedApp/: Function1.cs  TestIsolatedApp.csproj  TestIsolatedApp.sln
src/Docker/Dockerfiles/: readme.md
src/Docker/app/: docker-compose.yml
src/Docker/docker-compose/: docker-compose.yml
src/DotNetCore/BenchmarkDemo/: FileStreamTest.cs  Md5VsSha256.cs  Program.cs
src/DotNetCore/BlazeOrbital/: BlazeOrbital.sln
src/DotNetCore/BlazorAssmebly/: BlazorAssmebly.sln
src/DotNetCore/BlazorAssmeblyNoHost/: App.razor  BlazorAssmeblyNoHost.csproj  Program.cs  _Imports.razor
src/DotNetCore/BlazorFileAccess/: BlazorFileAccess.csproj  BlazorFileAccess.sln  Program.cs  _Imports.razor
src/DotNetCore/BlazorFileUploadDownload/: BlazorFileUploadDownload.csproj  BlazorFileUploadDownload.sln  Program.cs  _Imports.razor
src/DotNetCore/BlazorNativeFile/: .gitignore  BlazorNativeFile.csproj  BlazorNativeFile.sln  Program.cs  Test.c  _Imports.razor  package-lock.json  package.json  tailwind.config.js  tailwind.config.js.bak
src/DotNetCore/BlazorServerApp/: BlazorServerApp.csproj  Program.cs  _Imports.razor
src/DotNetCore/BlazorServerSignalRApp/: App.razor  BlazorServerSignalRApp.csproj  Program.cs  appsettings.json
src/DotNetCore/ComponentLibrary/: ExampleJsInterop.cs  ExtraStyles.razor  JeepYJ.razor
src/DotNetCore/DebugBlazorwasmNoHost/: App.razor  DebugBlazorwasmNoHost.csproj  Program.cs  _Imports.razor
src/Python/: README.md
src/Python/agentapi/: .env.example  README.md  activate_uv_env.ps1  activate_uv_env.sh  pyproject.toml  requirements.txt  setup.py
src/Python/agentapi/.uv/: config.toml
src/Python/agentapi/app/: __init__.py  main.py
src/Python/agentapi/app/api/: __init__.py  api.py
src/Python/agentapi/app/api/endpoints/: __init__.py  agent.py
src/Python/agentapi/app/core/: config.py  openai_client.py
src/Python/agentapi/app/models/: agent_model.py
src/Python/agentapi/app/schemas/: agent.py
src/Python/agentapi/scripts/: __init__.py  fix_paths.py
src/Python/fastapi_openai/: README.md  pyproject.toml
src/Python/fastapi_openai/src/fastapi_openai/: __init__.py  database.py  main.py  models.py  schemas.py  utils.py
src/Python/fastapi_openai/src/fastapi_openai/templates/: index.html  results.html
src/Python/lyrics_extract/: README.md  pyproject.toml
src/Python/lyrics_extract/src/lyrics_extract/: __init__.py
src/Python/lyrics_extract/src/lyrics_extract/static/: style.css
src/Python/lyrics_extract/src/lyrics_extract/templates/: index.html
tests/DotNetCoreTest/: UnitTest1.cs
(+1430 files in other folders)
