[project]
name = "agentapi"
version = "0.1.0"
description = "基于 FastAPI 构建的 AI 代理 API 服务"
authors = [
    {name = "Agent API Team", email = "example@example.com"}
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "python-dotenv==1.0.0",
    "httpx==0.25.0",
    "sqlalchemy==2.0.23",
    "python-jose==3.3.0",
    "passlib==1.7.4",
    "openai==1.3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.10.1",
    "isort==5.12.0",
    "mypy==1.6.1",
]

[tool.pytest]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true
