[project]
name = "lyrics-extract"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "aren", email = "code@arencore.me" }
]
dependencies = [
    "fastapi>=0.111.0",
    "pydub>=0.25.1",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
    "speechrecognition>=3.10.4",
    "openai>=1.35.13",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lyrics_extract"]
